# serser-rs

./: Cargo.toml  LICENSE  README.md
.github/workflows/: test.yml
benches/: criterion.rs
serser_derive/: Cargo.toml
serser_derive/src/: from.rs  into.rs  lib.rs
src/: convert_str.rs  csv.rs  error.rs  from.rs  from_async.rs  from_tuple.rs  into.rs  into_tuple.rs  json.rs  lib.rs  meta.rs  printsink.rs  test.rs  token.rs  utf8read.rs  vec.rs
src/csv/: from.rs  into.rs  options.rs
src/json/: from.rs  into.rs
src/test/: expecting.rs  printsink.rs
tests/: derive_from_tokens.rs  derive_into_tokens.rs
