[workspace]
members = ["serser_derive"]

[workspace.package]
edition = "2021"
authors = ["Tommie Gannert"]
repository = "https://github.com/tommie/serser-rs"
license = "MIT"
readme = "README.md"

[package]
name = "serser"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true

[dependencies]
base64 = "0.22.1"
maybe-owned = "0.3.4"
serser_derive = { version = "0.1.0", path = "serser_derive" }
